# spovm4_labs

lab1/: Makefile
lab1/src/: child_win.c  func.h  func_lin.c  func_win.c  main.c
lab2/: Makefile
lab2/src/: interface.h  main.c
lab2/src/lin/: child_lin.c  implementation_lin.c
lab2/src/stack/: stack.c  stack.h
lab2/src/win/: childManager.c  child_win.c  implementation_win.c  win_private.h
lab3/: Makefile
lab3/src/: messager.c  messager.h
lab3/src/lin/: common.h  messager_lin.c  messager_lin.h
lab3/src/win/: common.h  messageListener.c  messager_win.c
lab4/: Makefile
lab4/src/: main.c
lab4/src/child/: child.c  child.h
lab4/src/queue/: queue.c  queue.h
lab4/src/ring/: ring.c  ring.h
lab4/src/tm/: tm.c  tm.h
lab5/: Makefile  New Text Document.txt
lab5/src/: main.c
lab5/src/utilities/: utilities.c  utilities.h
lab5/src/zox_aio/: zox_aio.c  zox_aio.h  zox_aio_context.h
lab5/src/zox_aio/task/: zox_aio_task.c  zox_aio_task.h
lab5/src/zox_aio/task_executor/: task_executor.c  task_executor.h
lab5/src/zox_aio/task_executor/reader/: reader.c  (+1 more)
lab5/src/zox_aio/utilities/: utilities.c  utilities.h
lab5/test/: out.txt
lab6/: CMakeLists.txt  heap.txt  swap.txt
lab6/_builds/: CMakeCache.txt  Makefile
lab6/include/zox-mem/: zox-mem.h  zox-mem_private.h
lab6/src/: main.c
lab6/src/zox-mem/: heap_block.c  zox-mem.c
lab7/: CMakeLists.txt
lab7/_builds/: CMakeCache.txt  Makefile
lab7/include/: repl.h
lab7/include/zox-fs/: cluster.h  errors.h  zox-fs.h
lab7/src/: fail.c  main.c  repl.c
lab7/src/zox-fs/: cluster.c  zox-fs.c
(+2 files in other folders)
